# ESP32_I2S_test

./: CMakeLists.txt
main/: CMakeLists.txt  battery_adc.c  battery_adc.h  idf_component.yml  inmp441.c  inmp441.h  main.c  result_uart.c  result_uart.h  rtthread_wrapper.c  rtthread_wrapper.h  sntp_sync.c  sntp_sync.h  wifi.c  wifi.h  xfyun_iat.c  xfyun_iat.h
